Page MenuHome GnuPG

Kleopatra: Fix potential invalidation of the keys a command works on when the key cache is refreshed
Closed, ResolvedPublic

Description

See T6154: Kleopatra: Assert in CertifyCertificateCommand after setting ownertrust of key for an example of this problem.

This problem should really be fixed in the Command base class, so that it doesn't happen for any other concrete commands. The idea is to keep references to the selected key(s) instead of keeping the indexes of the selected key(s) because the indexes will become invalid when the key list model is reset after a refresh of the key cache.

Revisions and Commits

Event Timeline

ikloecker triaged this task as Normal priority.Aug 24 2022, 2:07 PM
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Sep 12 2022, 9:41 AM

All commands should work as before (or more robust if a key listing happens while the command is running). Setting to resolved because there isn't anything that can or should be tested specifically.