Set key instead of index for DetailsCommand

This was the only place where Command::setIndex() was used. Setting key
directly allows us to remove Command::setIndex() and is a first step in
making the commands independent of model indexes.

GnuPG-bug-id: 6157